fine tuning the css for the main page, aligning everything correctly

--- a/scholar-sync/src/pages/css/create.css
+++ b/scholar-sync/src/pages/css/create.css
@@ -6,9 +6,10 @@
     align-items: left;
     background-color:#FBFAFB;
     color:black;
-    width:100%;
-    height:100%;
-    padding:30px;
+    width:95%;
+    height:95%;
+    margin:10px 15px 15px 30px;
+    padding: 20px 0 0 20px;
 }
 
 .create-input,.end-container{
