--- a/scholar-sync/src/pages/css/dashboard.css
+++ b/scholar-sync/src/pages/css/dashboard.css
@@ -21,10 +21,9 @@ body{
 
 .custom-nav{
     background-color:#FBFAFB;
-    border:2px solid #94B7CB;
     margin-left:15px;
     margin-top:10px;
-    height:100%;
+    height:95%;
 
 }
 
